qualif ft_imei_transaction (qualif) et correction dt_base_identif

--- a/PROD/CONF/FT_EMEI_TRANSACTION/load-spark-ft-emei-transaction.conf
+++ b/PROD/CONF/FT_EMEI_TRANSACTION/load-spark-ft-emei-transaction.conf
@@ -12,6 +12,8 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
+flux.spark.setup-conf += {"key": "hive.vectorized.execution.enabled", "value": "false"}
+flux.spark.setup-conf += {"key": "hive.auto.convert.join","value": "false"}
 
 flux.name = "LOAD_SPARK_FT_EMEI_TRANSACTION"
 
@@ -34,6 +36,8 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/prequery_spark_ft
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
+flux.inline.exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_4"
+
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction1.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_imei_transaction2.hql"
@@ -44,4 +48,6 @@ flux.exec-queries += "/PROD/SCRIPTS/FT/FT_EMEI_TRANSACTION/insert_into_spark_ft_
 flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_1"
 flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_2"
 flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_3"
+flux.inline.post-exec-queries += "TRUNCATE TABLE TMP.SPARK_FT_IMEI_TRANSACTION_4"
+
 
