--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -2495,7 +2495,7 @@ crontasks +=
 
 crontasks +=
   {
-    instanceId = "UPDATE_SPARK_DT_BASE_IDENTIFICATION",
+    instanceId = "LOAD_UPDATE_SPARK_DT_BASE_IDENTIFICATION",
     cron = "0 57 */1 * * ?",
     configFile = "/PROD/CONF/IDENTIFICATION/update_spark_dt_base_identification.conf",
     taskType = "BATCH"
@@ -2617,7 +2617,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_MARKETING_DATAMART_MONTH",
-    cron = "0 53 */1 * * ?",
+    cron = "0 1 * 1-5 * ?",
     configFile = "/PROD/CONF/DATAMART/load-spark_ft-marketing-datamart-month.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
