Finition de datamart_marketing_b2b

--- a/PROD/CONF/ZSMART/load-spark-dt-user-contract-type.conf
+++ b/PROD/CONF/ZSMART/load-spark-dt-user-contract-type.conf
@@ -11,13 +11,13 @@ flux.setup-conf = []
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode", "value": "nonstrict"}
 
-//Ce paramètre est pour utile si on veut que cette dim se calcul chaque 5 jours par exemple,
-//Il est utilisé dans la pré requête, il faut noté que les paramètres flux.size ne permettent pas de le faire
+//Ce paramètre est utile si on veut que cette dim se calcule chaque 5 jours par exemple,
+//Il est utilisé dans la pré requête, il faut noté que les paramètres flux.slice ne permettent pas de le faire
 flux.spark.setup-var += {"key": "days_interval", "value": 0}
 
 flux.name = "LOAD_SPARK_DT_USER_CONTRACT_TYPE"
 
-flux.has-date-processing = false
+flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
 flux.slice-begin-value = -10
