ft_imei_transaction

--- a/PROD/CONF/spark-compute-cron-tasks.conf
+++ b/PROD/CONF/spark-compute-cron-tasks.conf
@@ -2521,7 +2521,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_EMEI_TRANSACTION",
-    cron = "0 50 23 * * ?",
+    cron = "0 50 * * * ?",
     configFile = "/PROD/CONF/spark-compute-cron-tasks.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
@@ -2546,7 +2546,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_DATAMART_OM_DAILY",
-    cron = "0 50 23 * * ?",
+    cron = "0 50 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-ft-datamart-om-daily.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
@@ -2570,7 +2570,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_DATAMART_OM_TRANS",
-    cron = "0 50 23 * * ?",
+    cron = "0 50 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-ft-datamart-om-trans.conf",
     taskType = "BATCH"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
