--- a/PROD/CONF/DD/load-spark-ft-client-lac-traffic-day.conf
+++ b/PROD/CONF/DD/load-spark-ft-client-lac-traffic-day.conf
@@ -32,7 +32,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/DD/prequery_ft_client_lac_traffic_day
 flux.inline.exec-queries += "TRUNCATE TABLE TMP.TT_CLIENT_LAC_TRAFFIC_DAY"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "DROP  TEMPORARY FUNCTION IF EXISTS FN_NNP_SIMPLE_DESTINATION"
-flux.inline.exec-queries += "CREATE TEMPORAY FUNCTION FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/compute_and_insert_into_tt_client_lac_traffic_day.hql"
 flux.exec-queries += "/PROD/SCRIPTS/FT/DD/compute_and_insert_into_spark_ft_client_lac_traffic_day.hql"
