update script calcul equation prepayee

--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
@@ -13,9 +13,9 @@ flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
 
 flux.spark.setup-var +=  {"key": "date_offset","value": "20"}
-flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_A_EDR_PRPD_EQT"}
+flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_EDR_PRPD_EQT"}
 flux.spark.setup-var +=  {"key": "insert_date_column","value": "INSERT_DATE"}
-flux.spark.setup-var +=  {"key": "database_table_name","value": "AGG.SPARK_FT_A_EDR_PRPD_EQT"}
+flux.spark.setup-var +=  {"key": "database_table_name","value": "AGG.SPARK_FT_EDR_PRPD_EQT"}
 flux.spark.setup-var +=  {"key": "flux_type","value": "PREPAID"}
 flux.spark.setup-var +=  {"key": "table_partition","value": "EVENT_DATE"}
 
@@ -24,7 +24,7 @@ flux.name = "LOAD_SPARK_FT_EDR_PRPD_EQT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -11
+flux.slice-begin-value = -30
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
