--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -218,3 +218,18 @@ crontasks +=
     ]
   }
 
+//  EXPORT sqoop-export-spark-ft-marketing-datamart.conf
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART",
+    cron = "0 */10 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
