--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
@@ -11,6 +11,7 @@ flux.setup-conf = []
 
 flux.spark.setup-conf += {"key": "spark.sql.crossJoin.enabled", "value": "true"}
 flux.spark.setup-conf += {"key": "hive.exec.dynamic.partition.mode","value": "nonstrict"}
+//flux.spark.setup-conf += {"key": "spark.sql.session.timeZone", "value": "WAT"}
 
 flux.spark.setup-var +=  {"key": "date_offset","value": "20"}
 flux.spark.setup-var +=  {"key": "table_name","value": "SPARK_FT_EDR_PRPD_EQT"}
@@ -37,6 +38,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
+flux.inline.exec-queries += "SELECT IF(COUNT(*)=0, 'OK','NOK') FT_EXIST FROM MON.SPARK_FT_EDR_PRPD_EQT WHERE EVENT_DATE='###SLICE_VALUE###'"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_spark_ft_edr_prpd_eqt.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_spark_completude_prpd_eqt.hql"
 
@@ -44,7 +46,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_spa
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
-flux.inline.exec-queries += "SET hive.exec.reducers.max=1"
+flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition.mode=nonstrict"
 flux.inline.exec-queries += "SET hive.enforce.bucketing=true"
