--- a/PROD/CONF/RECYCLAGE/load-spark-ft-msisdn_recyclage.conf
+++ b/PROD/CONF/RECYCLAGE/load-spark-ft-msisdn_recyclage.conf
@@ -29,6 +29,7 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.inline.pre-exec-queries += "SELECT IF(COUNT(*)=0, 'OK', 'NOK') FT_EXIST FROM MON.SPARK_FT_MSISDN_RECYCLAGE WHERE EVENT_DATE='###SLICE_VALUE###' "
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/RECYCLAGE/prequery_spark_ft_msisdn_recyclage.hql"
 
 flux.inline.exec-queries += "set  hive.exec.dynamic.partition=true"
