--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf
@@ -39,3 +39,5 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_MARKETING_DATAMART"
 flux.sqoop.export-rdms.dest-table = "MON.FT_MARKETING_DATAMART"
 flux.sqoop.export-hive.staging-table = "FT_TMP_MARKETING_DATAMART"
 flux.sqoop.export-hive.staging-table-database = "TMP"
+
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"
