sqoop  marketing datamart month

--- a/PROD/CONF/DATAMART/load-spark-ft-marketing-datamart-month.conf
+++ b/PROD/CONF/DATAMART/load-spark-ft-marketing-datamart-month.conf
@@ -27,6 +27,11 @@ flux.inline.exec-queries += "SET hive.enforce.bucketing=false"
 flux.inline.exec-queries += "SET hive.enforce.sorting=false"
 
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_OPERATOR_CODE"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
+
+flux.inline.exec-queries += "DROP TEMPORARY FUNCTION IF EXISTS FN_GET_NNP_MSISDN_SIMPLE_DESTN"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
 
 
