--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -233,3 +233,19 @@ crontasks +=
       //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
     ]
   }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART_MONTH",
+    cron = "0 1 * 1-5 * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
