--- a/PROD/CONF/NOTIFICATION/compute_spark_sms_fichiers.conf
+++ b/PROD/CONF/NOTIFICATION/compute_spark_sms_fichiers.conf
@@ -18,7 +18,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
