Ajout du paramètre de TimeZone dans les confs de déversement

--- a/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf
@@ -39,5 +39,6 @@ flux.sqoop.export-rdms.staging-table = "CTI.SQ_FT_A_APPELS_CTI"
 flux.sqoop.export-rdms.dest-table = "CTI.FT_A_APPELS_CTI"
 flux.sqoop.export-hive.staging-table = "SQ_FT_A_APPELS_CTI"
 flux.sqoop.export-hive.staging-table-database = "TMP"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
 
