--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
@@ -45,5 +45,6 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
 
