--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-msisdn-recyclage.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-msisdn-recyclage.conf
@@ -39,5 +39,6 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_MSISDN_RECYCLAGE"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_MSISDN_RECYCLAGE"
 flux.sqoop.export-hive.staging-table = "SQ_FT_A_MSISDN_RECYCLAGE"
 flux.sqoop.export-hive.staging-table-database = "TMP"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
 
