--- a/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
@@ -39,4 +39,5 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
