--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -39,4 +39,5 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table-database = "REPORT"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
