--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-daily.conf
@@ -46,4 +46,5 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GSM_TF_REV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REV_DAILY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_GSM_TRAFFIC_REVENUE_DAILY"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
