--- a/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
@@ -39,6 +39,7 @@ flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_DATA_TRANSFER"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
 
 
 
