update streaming subscription

--- a/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-kpis-by-axis.conf
+++ b/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-kpis-by-axis.conf
@@ -18,7 +18,7 @@ flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6
 flux.kafka.subscribe = "subs_activity"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
-flux.kafka.maxOffsetsPerTrigger = 50
+flux.kafka.maxOffsetsPerTrigger = 500000
 
 flux.input-schema += {"field": "START_DATE", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
 flux.input-schema += {"field": "END_DATE", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
@@ -55,4 +55,4 @@ flux.stream-query-name = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_KPIS_BY_AXIS"
 
 flux.kafka.output-topic="subs_activity_kpis_by_axis"
 flux.kafka.key-expression = "cast(time as string) AS key"
-flux.kafka.value-expression ="CAST(CONCAT(time,'|',commercial_offer,'|',administrative_region,'|',contract_type,'|',subs_channel,'|',subscription_service,'|',ORIGINAL_FILE_NAME,'|',amount,'|',nbr_total,'|',nbr_fact,'|',nbr_nonfact) AS STRING) AS value"
+flux.kafka.value-expression ="CAST(CONCAT(time,'|',commercial_offer,'|',administrative_region,'|',contract_type,'|',subs_channel,'|',subscription_service,'|',subscription_service_details,'|',ORIGINAL_FILE_NAME,'|',amount,'|',nbr_total,'|',nbr_fact,'|',nbr_nonfact) AS STRING) AS value"
