--- a/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-staging.conf
+++ b/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-staging.conf
@@ -4,10 +4,10 @@ flux.log-level = "INFO"
 flux.name = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_STAGING"
 
 flux.streaming-backpressure-enabled = true
-flux.streaming-backpressure-initialRate = 1000
+flux.streaming-backpressure-initialRate = 10000
 flux.streaming-backpressure-maxRate = 30000
 
-spark.streaming.kafka.maxRatePerPartition = 1000
+spark.streaming.kafka.maxRatePerPartition = 10000
 
 flux.input-type = "KAFKA"
 flux.output-type = "KAFKA"
@@ -19,7 +19,7 @@ flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6
 flux.kafka.subscribe = "in-zte-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
 flux.kafka.startingOffsets = "earliest"
-flux.kafka.maxOffsetsPerTrigger = 50
+flux.kafka.maxOffsetsPerTrigger = 300000
 
 flux.input-schema += {"field": "original_file_name", "type": "string"}
 flux.input-schema += {"field": "original_file_size", "type": "integer"}
@@ -67,5 +67,5 @@ flux.stream-query = "/PROD/SCRIPTS/STREAMING/earliest-stream-subs-activity-stagi
 flux.stream-query-name = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_STAGING"
 
 flux.kafka.output-topic="subs_activity_staging"
-flux.kafka.key-expression = "CAST(concat(START_DATE,'', END_DATE) AS STRING) AS key"
+flux.kafka.key-expression = "original_file_name AS key"
 flux.kafka.value-expression = "CAST(CONCAT(START_DATE,'|',END_DATE,'|',PREPAY_FLAG,'|',PROD_SPEC_CODE,'|',administrative_region,'|',SUBS_EVENT_ID,'|',CHANNEL_ID,'|',SUBS_TOTAL_COUNT,'|',SUBS_AMOUNT,'|',MSISDN_COUNT,'|',SUBS_EVENT_RATED_COUNT,'|', PRICE_PLAN_CODE,'|',ORIGINAL_FILE_NAME) AS STRING) AS value"
