--- a/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity.conf
+++ b/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity.conf
@@ -56,5 +56,5 @@ flux.stream-query = "/PROD/SCRIPTS/STREAMING/earliest-stream-subs-activity.hql"
 flux.stream-query-name = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY"
 
 flux.kafka.output-topic="subs_activity"
-flux.kafka.key-expression = "CAST(concat(START_DATE,'', END_DATE) AS STRING) AS key"
+flux.kafka.key-expression = "original_file_name AS key"
 flux.kafka.value-expression = "CAST(CONCAT(START_DATE,'|',END_DATE,'|',contract_type,'|',commercial_offer,'|',subs_channel,'|',administrative_region,'|',subs_total_count,'|',subs_amount,'|',MSISDN_COUNT,'|',SUBS_EVENT_RATED_COUNT,'|', subscription_service,'|',subscription_service_details,'|',ORIGINAL_FILE_NAME) AS STRING) AS value"
