--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-account-activity.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-account-activity.conf
@@ -25,7 +25,7 @@ SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
-(SELECT COUNT(*) NBR FROM MON.SPARK_FT_ACCOUNT_ACTIVITY WHERE EVENT_DATE='###SLICE_VALUE###') A
+(SELECT COUNT(*) NBR FROM MON.SPARK_FT_ACCOUNT_ACTIVITY WHERE EVENT_DATE='###SLICE_VALUE###') A:;
 """
 
 flux.sqoop.jdbc-connect-uri = "jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL = TCP)(HOST = 172.21.95.20)(PORT = 20303)))(CONNECT_DATA=(SERVICE_NAME = OCMDWH)))"
