--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -31,6 +31,21 @@ crontasks +=
     ]
   }
 
+// // EXPORT FT-ACCOUNT_ACTIVITY
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_ACCOUNT_ACTIVITY",
+    cron = "0 40 */4 * * ?",
+    configFile = "PROD/CONF/SQOOP/sqoop-export-spark-ft-account-activity.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+    ]
+  }
+
   // // EXPORT ft-gsm-traffic-revenue-daily
 crontasks +=
   {
