--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-gprs-activity-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-gprs-activity-post.conf
@@ -1,6 +1,6 @@
 //------******************************************************************
 //------********************* EXPORT FTA TO DWH ********************** 
-//------ ARNOLD CHUENFFO 15-02-2019 ----------------------------------
+//------ ALEX BILLANG 06-04-2020 ----------------------------------
 //------*****************************------*******************************
 
 flux.yarn.queue = "PROD"
