--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
@@ -1,8 +1,7 @@
-//-- ---********************************************************---
-//---------EXPORT FT_A_SUBSCRIPTION -------------------
-//-------- ARNOLD CHUENFFO 18-02-2019
-//------- export data to Datawarehouse
-//---***********************************************************---
+//------******************************************************************
+//------********************* EXPORT FTA TO DWH ********************** 
+//------ ALEX BILLANG 06-04-2020 ----------------------------------
+//------*****************************------*******************************
 
 
 flux.yarn.queue = "PROD"
