--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -249,3 +249,18 @@ crontasks +=
       //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
     ]
   }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_CLIENT_LAST_SITE_DAY",
+    cron = "0 */20 * * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-last-site-day.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
