correction et automatisation de  data transfer

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -95,7 +95,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_A_DATA_TRANSFER",
-    cron = "0 25 */4 * * ?",
+    cron = "0 30/4 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-data-transfer.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
