--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -28,6 +28,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -43,6 +44,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -58,6 +60,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -73,6 +76,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -88,6 +92,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -103,6 +108,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -119,6 +125,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -135,6 +142,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -151,6 +159,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -166,6 +175,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -182,6 +192,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -197,7 +208,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -213,7 +224,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -229,7 +240,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -245,7 +256,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -261,6 +272,6 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
