correction sqoop ft global activity

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily.conf
@@ -40,3 +40,4 @@ flux.sqoop.export-rdms.dest-table = "MON.FT_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"
