--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-cust-insigth-daily.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-cbm-cust-insigth-daily.conf
@@ -30,7 +30,7 @@ flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CBM/CUST_INSIGTH/prequery_spark_ft_cbm_cust_insigth_daily.hql"
 
-flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.1.jar"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-cbm-1.0.1.jar"
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_nnp_remove_rn"
 flux.inline.exec-queries += "create temporary function fn_nnp_remove_rn as 'cm.orange.bigdata.udf.GetNnpRemoveRn'"
 flux.inline.exec-queries += "DROP TEMPORARY  FUNCTION IF EXISTS fn_get_nnp_msisdn_simple_destn"
