Ajout du paramètre -jt local sur les fichiers de conf de sqoop

--- a/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf
@@ -46,5 +46,6 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_GPRS_ACTIVITY"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
