--- a/PROD/CONF/SQOOP/sqoop-export-ft-contract-snapshot.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-contract-snapshot.conf
@@ -41,3 +41,4 @@ flux.sqoop.export-hive.staging-table = "FT_TMP_CONTRACT_SNAPSHOT"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
