--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -40,4 +40,5 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_GLOBAL_ACTIVITY_DAILY"
 flux.sqoop.export-hive.staging-table-database = "REPORT"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
