--- a/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-gsm-traffic-revenue-post.conf
@@ -47,6 +47,7 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_GSM_TRAFFIC_REVENUE_POST"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_GSM_TF_REV_POST"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
 
