--- a/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-x-interco-final.conf
@@ -47,5 +47,6 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_X_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_X_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
