--- a/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf
@@ -42,6 +42,7 @@ flux.sqoop.export-hive.staging-table-database = "TMP"
 
 //flux.sqoop.extra-params = []
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 //flux.hive.extra-conf = []
 
