--- a/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf
@@ -40,5 +40,6 @@ flux.sqoop.export-rdms.dest-table = "CTI.FT_A_APPELS_CTI"
 flux.sqoop.export-hive.staging-table = "SQ_FT_A_APPELS_CTI"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
