--- a/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
@@ -47,6 +47,7 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
 
