--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf
@@ -41,3 +41,4 @@ flux.sqoop.export-hive.staging-table = "FT_TMP_MARKETING_DATAMART"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
 flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
