--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-data-transfer.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-data-transfer.conf
@@ -40,7 +40,8 @@ flux.sqoop.export-rdms.dest-table = "MON.FT_A_DATA_TRANSFER"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_DATA_TRANSFER"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
-flux.sqoop.extra-params +="-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
 
 
 
