--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
@@ -46,6 +46,5 @@ flux.sqoop.export-rdms.dest-table = "MON.FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
-flux.sqoop.extra-params +="-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"
-
-
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
+flux.sqoop.extra-params +="-jt local"
