Updating cron for quicksearch job

--- a/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
@@ -737,7 +737,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_SPARK_FT_QUICKSEARCH_CDR",
-    cron = "* * */3 * * ?",
+    cron = "0 0 */3 * * ?",
     configFile = "/DATALAB/CONF/QUICKSEARCH/load-spark-ft-quicksearch-cdr.conf",
     taskType = "BATCH",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
