--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ AlfredDev
 .gitignore
 PROD/SCRIPTS/FT/IN_ZTE/SUBSCRIPTION/test_compute_and_insert_into_ft_subscription.hql
 PROD/PLAY-GROUND
+PLAYGROUND
