--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
@@ -38,7 +38,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.inline.exec-queries += "SELECT IF(COUNT(*)=0, 'OK','NOK') FT_EXIST FROM MON.SPARK_FT_EDR_PRPD_EQT WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.inline.pre-exec-queries += "SELECT IF(COUNT(*)=0, 'OK','NOK') FT_EXIST FROM MON.SPARK_FT_EDR_PRPD_EQT WHERE EVENT_DATE='###SLICE_VALUE###'"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_spark_ft_edr_prpd_eqt.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EQUATION_PREPAYEE/prequery_spark_completude_prpd_eqt.hql"
 
