--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf
@@ -36,7 +36,7 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 flux.sqoop.query = "SELECT * FROM MON.SPARK_FT_MARKETING_DATAMART_MONTH WHERE EVENT_MONTH='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_MARKETING_DATAMART_MONTH"
-flux.sqoop.export-rdms.dest-table = "MON.FT_MARKETING_DATAMART"
+flux.sqoop.export-rdms.dest-table = "MON.FT_MARKETING_DATAMART_MONTH"
 flux.sqoop.export-hive.staging-table = "FT_MARKETING_DATAMART_MONTH"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
