migrer ft_revenu_localise et ft_gprs_site_revenu_daily (qualif) et correction déverssement datamart_month

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf
@@ -21,7 +21,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM FT_MARKETING_DATAMART_MONTH WHERE event_month =REGEXP_REPLACE('2015-03', '-', ''))
+(SELECT COUNT(*) NBR FROM FT_MARKETING_DATAMART_MONTH WHERE event_month = REGEXP_REPLACE('###SLICE_VALUE###', '-', ''))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
