correction erreurs spool

--- a/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
@@ -40,3 +40,4 @@ flux.sqoop.export-rdms.dest-table = "MON.SQ_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table = "SQ_TMP_FT_AG_INTERCO_FINAL"
 flux.sqoop.export-hive.staging-table-database = "DEFAULT"
 
+flux.sqoop.extra-params +="-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"
