--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -20,7 +20,7 @@ env = "prod"
 crontasks +=
   {
     instanceId = "SQ_EXPORT_FT_AG_INTERCO",
-    cron = "0 40 */4 * * ?",
+    cron = "0 40 */2 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
@@ -163,7 +163,7 @@ crontasks +=
     configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
-    timeout = "30 minutes"
+    timeout = "60 minutes"
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
@@ -253,8 +253,24 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_CLIENT_LAST_SITE_DAY",
-    cron = "0 */20 * * * ?",
+    cron = "0 10 */2 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-client-last-site-day.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_CONTRACT_SNAPSHOT",
+    cron = "0 15 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-ft-contract-snapshot.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "60 minutes"
