--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -100,7 +100,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_A_DATA_TRANSFER",
-    cron = "0 30/4 * * ?",
+    cron = "0 50 */2 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-data-transfer.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
@@ -246,7 +246,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_A_MSISDN_RECYCLAGE",
-    cron = "0 */10 * * * ?",
+    cron = "0 55 */4 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-fta-msisdn-recyclage.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
@@ -262,7 +262,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART",
-    cron = "0 */20 * * * ?",
+    cron = "0 45 */2 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
@@ -278,7 +278,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART_MONTH",
-    cron = "0 1 * 1-5 * ?",
+    cron = "0 5 */2 1-5 * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
@@ -301,7 +301,7 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
 
@@ -317,6 +317,70 @@ crontasks +=
     extraTaskParams : [
       {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
-      //, {"param" : "-Dmapreduce.map.java.opts=' -Duser.timezone=UTC'"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_DATA_TRANSFER",
+    cron = "0 20 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_GPRS_ACTIVITY",
+    cron = "0 25 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_GPRS_ACTIVITY_POST",
+    cron = "0 30 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-gprs-activity-post.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_FT_A_SUBSCRIPTION",
+    cron = "0 35 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
