ajout des jobs d'export des parcs

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -384,3 +384,49 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_A_SUBSCRIBER_SUMMARY",
+    cron = "0 35 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-subscriber-summary.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_COMMERCIAL_SUBSCRIB_SUMMARY",
+    cron = "0 35 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-commercial-subscrib-summary.conf",
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "SQ_EXPORT_SPARK_FT_GROUP_SUBSCRIBER_SUMMARY",
+    cron = "0 35 */2 * * ?",
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-group-subscriber-summary.conf,
+    taskType = "SQOOP"
+    taskLauncher = ${SQOOP_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+      , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+    ]
+  }
