--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-global-activity-daily.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT COMMERCIAL_OFFER_CODE, TRANSACTION_TYPE, SUB_ACCOUNT, TRANSACTION_SIGN, SOURCE_PLATFORM, SOURCE_DATA, SERVED_SERVICE, SERVICE_CODE, DESTINATION, OTHER_PARTY_ZONE, MEASUREMENT_UNIT, RATED_COUNT, RATED_VOLUME, TAXED_AMOUNT, UNTAXED_AMOUNT, INSERT_DATE , TRAFFIC_MEAN, OPERATOR_CODE, TRANSACTION_DATE FROM AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "select TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,SUM(RATED_COUNT) RATED_COUNT,SUM(RATED_VOLUME) RATED_VOLUME,SUM(TAXED_AMOUNT) TAXED_AMOUNT,SUM(UNTAXED_AMOUNT) UNTAXED_AMOUNT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE from agg.spark_ft_global_activity_daily where transaction_date='###SLICE_VALUE###' group by TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_GLOBAL_ATV_DAILY"
 flux.sqoop.export-rdms.dest-table = "MON.FT_GLOBAL_ACTIVITY_DAILY"
