--- a/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-fta-subscription.conf
@@ -39,7 +39,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT TRANSACTION_DATE, TRANSACTION_TIME,CONTRACT_TYPE ,OPERATOR_CODE ,MAIN_USAGE_SERVICE_CODE ,COMMERCIAL_OFFER ,PREVIOUS_COMMERCIAL_OFFER,SUBS_SERVICE ,SUBS_BENEFIT_NAME ,SUBS_CHANNEL ,SUBS_RELATED_SERVICE ,SUBS_TOTAL_COUNT,SUBS_AMOUNT ,SOURCE_PLATFORM ,SOURCE_DATA ,INSERT_DATE ,SERVICE_CODE ,MSISDN_COUNT ,SUBS_EVENT_RATED_COUNT ,SUBS_PRICE_UNIT FROM AGG.SPARK_FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT TRANSACTION_DATE,TRANSACTION_TIME,CONTRACT_TYPE,OPERATOR_CODE,MAIN_USAGE_SERVICE_CODE,COMMERCIAL_OFFER,PREVIOUS_COMMERCIAL_OFFER,SUBS_SERVICE,SUBS_BENEFIT_NAME,SUBS_CHANNEL,SUBS_RELATED_SERVICE,SUBS_TOTAL_COUNT,SUBS_AMOUNT,SOURCE_PLATFORM,SOURCE_DATA,INSERT_DATE,SERVICE_CODE,MSISDN_COUNT,SUBS_EVENT_RATED_COUNT,SUBS_PRICE_UNIT,AMOUNT_SVA,AMOUNT_VOICE_ONNET,AMOUNT_VOICE_OFFNET,AMOUNT_VOICE_INTER,AMOUNT_VOICE_ROAMING,AMOUNT_SMS_ONNET,AMOUNT_SMS_OFFNET,AMOUNT_SMS_INTER,AMOUNT_SMS_ROAMING,AMOUNT_DATA,COMBO FROM AGG.SPARK_FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_TMP_FT_A_SUBSCRIPTION"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_SUBSCRIPTION"
