--- a/PROD/CONF/IN_ZTE/FT/CLIENT360/load-spark-ft-data-conso-msisdn-day.conf
+++ b/PROD/CONF/IN_ZTE/FT/CLIENT360/load-spark-ft-data-conso-msisdn-day.conf
@@ -29,7 +29,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/CLIENT360/FT_DATA_CONSO_MSISDN_DAY/prequery_spark_ft_data_conso_msisdn_day.hql"
 
