update des sqoop export parc

--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-commercial-subscrib-summary.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-commercial-subscrib-summary.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "select TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,SUM(RATED_COUNT) RATED_COUNT,SUM(RATED_VOLUME) RATED_VOLUME,SUM(TAXED_AMOUNT) TAXED_AMOUNT,SUM(UNTAXED_AMOUNT) UNTAXED_AMOUNT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE from agg.spark_ft_global_activity_daily where transaction_date='###SLICE_VALUE###' group by TRANSACTION_DATE,COMMERCIAL_OFFER_CODE,TRANSACTION_TYPE,SUB_ACCOUNT,TRANSACTION_SIGN,SOURCE_PLATFORM,SOURCE_DATA,SERVED_SERVICE,SERVICE_CODE,DESTINATION,OTHER_PARTY_ZONE,MEASUREMENT_UNIT,INSERT_DATE,TRAFFIC_MEAN,OPERATOR_CODE"
+flux.sqoop.query = "select DATECODE,NETWORK_DOMAIN,NETWORK_TECHNOLOGY,SUBSCRIBER_CATEGORY,CUSTOMER_ID,SUBSCRIBER_TYPE,COMMERCIAL_OFFER,ACCOUNT_STATUS,LOCK_STATUS,ACTIVATION_MONTH,CITYZONE,USAGE_TYPE,TOTAL_COUNT,TOTAL_ACTIVATION,TOTAL_DEACTIVATION,TOTAL_EXPIRATION,TOTAL_PROVISIONNED,TOTAL_MAIN_CREDIT,TOTAL_PROMO_CREDIT,TOTAL_SMS_CREDIT,TOTAL_DATA_CREDIT,SOURCE,REFRESH_DATE,PROFILE_NAME,PLATFORM_ACCOUNT_STATUS,PLATFORM_ACTIVATION_MONTH FROM MON.SPARK_FT_COMMERCIAL_SUBSCRIB_SUMMARY WHERE DATECODE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_COMMERCIAL_SUBSCRIB_SUM"
 flux.sqoop.export-rdms.dest-table = "MON.FT_COMMERCIAL_SUBSCRIB_SUMMARY"
