correcton de l'erreur dans le fichier de conf du sqoop

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -420,7 +420,7 @@ crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_GROUP_SUBSCRIBER_SUMMARY",
     cron = "0 35 */2 * * ?",
-    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-group-subscriber-summary.conf,
+    configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-group-subscriber-summary.conf",
     taskType = "SQOOP"
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "60 minutes"
