--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-location-revenue-daily.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-gsm-location-revenue-daily.conf
@@ -16,11 +16,19 @@ flux.name = "LOAD_SPARK_FT_GSM_LOCATION_REVENUE_DAILY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -15
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct transaction_date from mon.spark_ft_gsm_location_revenue_daily where transaction_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
