--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity-post.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-a-gprs-activity-post.conf
@@ -24,11 +24,20 @@ flux.name = "LOAD_SPARK_FT_A_GPRS_ACTIVITY_POST"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct datecode from agg.spark_ft_a_gprs_activity_post where datecode between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
+flux.slice-date-format = "yyyy-MM-dd"
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
