Ajout de la propriété de filtrage des dates dans les fichiers de conf

--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-last-site-location.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-last-site-location.conf
@@ -21,6 +21,14 @@ flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    distinct date_format(datecode,'yyyy-MM')
+from dim.dt_dates
+where substring(datecode, 1, 7) between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7)
+    and substring(datecode, 1, 7) in (select distinct EVENT_MONTH from MON.SPARK_FT_CLIENT_LAST_SITE_LOCATION where EVENT_MONTH between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7))
+"""
 flux.slice-date-format = "yyyy-MM"
 
 flux.has-pre-queries = true
