--- a/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
+++ b/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-spark-ft-edr-prpd-eqt.conf
@@ -25,11 +25,18 @@ flux.name = "LOAD_SPARK_FT_EDR_PRPD_EQT"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -16
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct EVENT_DATE from MON.SPARK_FT_EDR_PRPD_EQT where EVENT_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
