--- a/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT/compute-spark-kpi-gsm_traffic_revenue.conf
+++ b/PROD/CONF/IN_ZTE/FT/GLOBAL_ACTIVITY_MKT/compute-spark-kpi-gsm_traffic_revenue.conf
@@ -17,11 +17,19 @@ flux.name = "LOAD_SPARK_KPI_GSM_TRAFFIC_REVENUE"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -50
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct TRANSACTION_DATE from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY_MKT where SOURCE_TABLE = 'FT_GSM_TRAFFIC_REVENUE_DAILY' and TRANSACTION_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
