--- a/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-credit-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-credit-transfer.conf
@@ -18,16 +18,24 @@ flux.name = "LOAD_SPARK_KPI_CREDIT_TRANSFER"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct EVENT_DATE from AGG.SPARK_REVENUE_SUMMARY_DAILY where source_data = 'FT_CREDIT_TRANSFER' and EVENT_DATE between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/prequery_spark_kpi_credit_transfer.hql"
 
