--- a/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-kpi-adjustement.conf
@@ -34,7 +34,7 @@ select
     date_format(datecode,'yyyy-MM-dd')
 from dim.dt_dates
 where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
-    and datecode in (select distinct transaction_date from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY where transaction_date between date_sub(current_date, 7) and date_sub(current_date, 1))
+    and datecode in (select distinct transaction_date from AGG.SPARK_FT_GLOBAL_ACTIVITY_DAILY where source_data = 'IT_ZTE_ADJUSTMENT' and transaction_date between date_sub(current_date, 7) and date_sub(current_date, 1))
 """
 flux.slice-date-format = "yyyy-MM-dd"
 
