update de la programation des jobs et ajout du taskQueue

--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -25,7 +25,8 @@ cronmanagerId = "003"
 //    instanceId = "STREAMING_PROD01_CALC_FT_A_SUBS",
 //    cron = "0 */5 * * * ?",
 //    configFile = "/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf",
-//    taskType = "STREAMING"
+//    taskType = "STREAMING",
+     taskQueue = "compute",
 //    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
 //    timeout = "0 minutes"
 //    extraTaskParams : [
@@ -50,7 +51,8 @@ crontasks +=
     instanceId = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_ROOT",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity.conf",
-    taskType = "STREAMING"
+    taskType = "STREAMING",
+     taskQueue = "compute",
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
@@ -72,7 +74,8 @@ crontasks +=
     instanceId = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_KPIS_ROOT",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-kpis.conf",
-    taskType = "STREAMING"
+    taskType = "STREAMING",
+     taskQueue = "compute",
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
@@ -94,7 +97,8 @@ crontasks +=
     instanceId = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_KPIS_BY_AXIS",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-kpis-by-axis.conf",
-    taskType = "STREAMING"
+    taskType = "STREAMING",
+     taskQueue = "compute",
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
@@ -116,7 +120,8 @@ crontasks +=
     instanceId = "EARLIEST_STREAMING_CALC_SUBS_ACTIVITY_STAGING",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/earliest-stream-calc-subs-activity-staging.conf",
-    taskType = "STREAMING"
+    taskType = "STREAMING",
+     taskQueue = "compute",
     taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
     timeout = "0 minutes"
     extraTaskParams : [
