--- a/PROD/CONF/spark-collect-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-cron-tasks.conf
@@ -26,6 +26,7 @@ crontasks +=
     cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-price-plan-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -50,6 +51,7 @@ crontasks +=
     cron = "55 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-acc-nbr-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -74,6 +76,7 @@ crontasks +=
     cron = "55 15-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-acct-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -98,6 +101,7 @@ crontasks +=
     cron = "55 20-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-bal-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -122,6 +126,7 @@ crontasks +=
     cron = "55 20-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-bal-snap.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -146,6 +151,7 @@ crontasks +=
     cron = "55 25-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-cust-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -170,6 +176,7 @@ crontasks +=
     cron = "55 15-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-del-expbal.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -194,6 +201,7 @@ crontasks +=
     cron = "35 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-ipp-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -218,6 +226,7 @@ crontasks +=
     cron = "55 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-prod-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -242,6 +251,7 @@ crontasks +=
     cron = "55 */30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-prod-spec-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -266,6 +276,7 @@ crontasks +=
     cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-subs-extract.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -291,6 +302,7 @@ crontasks +=
     cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-check_file.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -315,6 +327,7 @@ crontasks +=
     cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-check_file_all.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -339,6 +352,7 @@ crontasks +=
     cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-subscription.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -363,6 +377,7 @@ crontasks +=
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-data.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -389,6 +404,7 @@ crontasks +=
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-voice_sms.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -415,6 +431,7 @@ crontasks +=
     cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-profile.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -440,6 +457,7 @@ crontasks +=
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/MSC/load-spark-it-cra-msc-huawei.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -469,6 +487,7 @@ crontasks +=
     cron = "30 */20 * * * ?",
     configFile = "/PROD/CONF/MVAS/load-spark-it-smsc-mvas-a2p.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -492,6 +511,7 @@ crontasks +=
     cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-balance_reset.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -515,6 +535,7 @@ crontasks +=
     cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-recharge.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -538,6 +559,7 @@ crontasks +=
     cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-transfer.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -564,6 +586,7 @@ crontasks +=
     cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-adjustment.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -590,6 +613,7 @@ crontasks +=
     cron = "0 25-50/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-voice_sms_post.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -615,6 +639,7 @@ crontasks +=
     cron = "30 15 */1 * * ?",
     configFile = "/PROD/CONF/BDI/load-spark-it-bdi.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -640,6 +665,7 @@ crontasks +=
     cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/P2P/load-spark-it-p2p.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -665,6 +691,7 @@ crontasks +=
     cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-checkfile.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -691,6 +718,7 @@ crontasks +=
     cron = "50 10-59/15 * * * ?",
     configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-master.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -715,6 +743,7 @@ crontasks +=
      cron = "50 */15 * * * ?",
      configFile = "/PROD/CONF/ZEBRA/IT/load-spark-it-zebra-transac.conf",
      taskType = "BATCH"
+     taskQueue = "collect"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "100 minutes"
      extraTaskParams : [
@@ -739,6 +768,7 @@ crontasks +=
      cron = "30 5-59/20 * * * ?",
      configFile = "/PROD/CONF/OTARIE/IT/load-spark-it-customer-sp-otarie.conf",
      taskType = "BATCH"
+     taskQueue = "collect"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "100 minutes"
      extraTaskParams : [
@@ -763,6 +793,7 @@ crontasks +=
      cron = "30 10-59/20 * * * ?",
      configFile = "/PROD/CONF/OTARIE/IT/load-spark-it-traffic-cust-cell-otarie.conf",
      taskType = "BATCH"
+     taskQueue = "collect"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "100 minutes"
      extraTaskParams : [
@@ -787,6 +818,7 @@ crontasks +=
      cron = "30 15-59/20 * * * ?",
      configFile = "/PROD/CONF/OTARIE/IT/load-spark-it-traffic-cust-otarie.conf",
      taskType = "BATCH"
+     taskQueue = "collect"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "100 minutes"
      extraTaskParams : [
@@ -811,6 +843,7 @@ crontasks +=
        cron = "0 5-59/10 * * * ?",
        configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-emergency-data.conf",
         taskType = "BATCH"
+     taskQueue = "collect"
         taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
         timeout = "50 minutes"
         extraTaskParams : [
@@ -835,6 +868,7 @@ crontasks +=
     cron = "0 0-20/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-data-post.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
     extraTaskParams : [
@@ -860,6 +894,7 @@ crontasks +=
      cron = "0 */10 * * * ?",
      configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-emergency-credit.conf",
      taskType = "BATCH"
+     taskQueue = "collect"
      taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
      timeout = "50 minutes"
      extraTaskParams : [
@@ -886,6 +921,7 @@ crontasks +=
     cron = "0 5-59/10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-spark-it-zte-recurring.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -910,6 +946,7 @@ crontasks +=
     cron = "0 40 */1 * * ?",
     configFile = "/PROD/CONF/IDENTIFICATION/load-spark-it-nomad-client-directory.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -934,6 +971,7 @@ crontasks +=
     cron = "0 45 */1 * * ?",
     configFile = "/PROD/CONF/IDENTIFICATION/load-spark-it-nomad-client-directory-update.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -959,6 +997,7 @@ crontasks +=
     cron = "0 40 */1 * * ?",
     configFile = "/PROD/CONF/IDENTIFICATION/load-spark-it-prepaid-client-directory.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -986,6 +1025,7 @@ crontasks +=
     cron = "0 5-50/20 * * * ?",
     configFile = "/PROD/CONF/CTI/load-it-irf-user-data-cust.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "60 minutes"
     extraTaskParams : [
@@ -1014,6 +1054,7 @@ crontasks +=
     cron = "30 */30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-transactions.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1038,6 +1079,7 @@ crontasks +=
     cron = "30 5-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-om-apgl.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1062,6 +1104,7 @@ crontasks +=
     cron = "30 10-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-om-all-balance.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1086,6 +1129,7 @@ crontasks +=
     cron = "30 15-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Commission.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1110,6 +1154,7 @@ crontasks +=
     cron = "30 20-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load_spark_it_omny_services_charges_details.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams :[
@@ -1133,6 +1178,7 @@ crontasks +=
     cron = "30 25-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-om-subscribers.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1157,6 +1203,7 @@ crontasks +=
     cron = "30 5-49/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-operator-balance.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1181,6 +1228,7 @@ crontasks +=
     cron = "35 10-49/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-account-snapshot-channel.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1205,6 +1253,7 @@ crontasks +=
     cron = "35 10-49/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-account-snapshot-subscribers.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1229,6 +1278,7 @@ crontasks +=
     cron = "30 5-49/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Admin-Audit-Trail.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1254,6 +1304,7 @@ crontasks +=
     cron = "0 40 */1 * * ?",
     configFile = "/PROD/CONF/IDENTIFICATION/load-spark-it-client-snapid-directory.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -1278,6 +1329,7 @@ crontasks +=
     cron = "0 5-59/15 * * * ?",
     configFile = "/PROD/CONF/NIFI_LOGS/load-spark-it-log.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "20 minutes"
     extraTaskParams : [
@@ -1301,6 +1353,7 @@ crontasks +=
     cron = "0 42 */1 * * ?",
     configFile = "/PROD/CONF/NIFI_LOGS/load-spark-it-logs-spools.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "100 minutes"
     extraTaskParams : [
@@ -1326,6 +1379,7 @@ crontasks +=
     cron = "30 15-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Commission_Details.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1351,6 +1405,7 @@ crontasks +=
     cron = "30 15-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-SYSSERVICETYPES.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1374,6 +1429,7 @@ crontasks +=
     cron = "30 20-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-BalanceChannelUsers.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1399,6 +1455,7 @@ crontasks +=
     cron = "30 25-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-BalanceSubscribers.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1422,6 +1479,7 @@ crontasks +=
     cron = "30 30-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Barred-Accounts.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
@@ -1445,6 +1503,7 @@ crontasks +=
     cron = "30 35-59/30 * * * ?",
     configFile = "/PROD/CONF/OM/load-spark-it-omny-Billing-Associations.conf",
     taskType = "BATCH"
+     taskQueue = "collect"
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER}
     timeout = "40 minutes"
     extraTaskParams : [
