--- a/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
+++ b/PROD/CONF/spark-collect-zsmart-cron-tasks.conf
@@ -26,6 +26,7 @@ crontasks +=
     cron = "55 5-59/30 * * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-account.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "60 minutes",
     extraTaskParams : [
@@ -49,6 +50,7 @@ crontasks +=
     cron = "30 5 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-bill.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -72,6 +74,7 @@ crontasks +=
     cron = "30 10 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-billcycle.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -95,6 +98,7 @@ crontasks +=
     cron = "30 15 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-ca-transaction.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -118,6 +122,7 @@ crontasks +=
     cron = "30 20 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-chansim.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -141,6 +146,7 @@ crontasks +=
     cron = "30 25 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-chantel.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -164,6 +170,7 @@ crontasks +=
     cron = "30 30 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-conserv.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -187,6 +194,7 @@ crontasks +=
     cron = "30 35 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-cont.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -210,6 +218,7 @@ crontasks +=
     cron = "30 40 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-cust-full.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -233,6 +242,7 @@ crontasks +=
     cron = "30 45 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-custgroup.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -256,6 +266,7 @@ crontasks +=
     cron = "30 50 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-depocredi.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -279,6 +290,7 @@ crontasks +=
     cron = "30 59 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-gesflot.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -302,6 +314,7 @@ crontasks +=
     cron = "30 5 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-pay.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -325,6 +338,7 @@ crontasks +=
     cron = "30 10 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-ratechan.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -348,6 +362,7 @@ crontasks +=
     cron = "30 15 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-rateplan.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -371,6 +386,7 @@ crontasks +=
     cron = "30 20 */1 * * ?",
     configFile = "/PROD/CONF/ZSMART/load-spark-it-service.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "55 minutes",
     extraTaskParams : [
@@ -394,6 +410,7 @@ crontasks +=
     cron = "30 25 */1 * * ?",
     configFile = "/PROD/CONF/FT_CELL_TRAFIC_DAYLY/load-spark-ft-amn-local-traffic-day.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -418,6 +435,7 @@ crontasks +=
     cron = "30 30 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-adjustement.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -441,6 +459,7 @@ crontasks +=
     cron = "30 32 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-contract-snapshot.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -464,6 +483,7 @@ crontasks +=
     cron = "30 34 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-data-transfer.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -487,6 +507,7 @@ crontasks +=
     cron = "30 36 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-gprs.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -510,6 +531,7 @@ crontasks +=
     cron = "30 38 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-gprs-post.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -533,6 +555,7 @@ crontasks +=
     cron = "30 40 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-gsm.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -556,6 +579,7 @@ crontasks +=
     cron = "30 42 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-gsm-post.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -579,6 +603,7 @@ crontasks +=
     cron = "30 46 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-omny-transactions.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -602,6 +627,7 @@ crontasks +=
     cron = "30 48 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-overdraft.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -625,6 +651,7 @@ crontasks +=
     cron = "30 50 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-refill.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -648,6 +675,7 @@ crontasks +=
     cron = "30 52 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-subsc.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -671,6 +699,7 @@ crontasks +=
     cron = "30 54 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-subsc-retail-zebra.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -694,6 +723,7 @@ crontasks +=
     cron = "30 56 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-credit-transfer.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -717,6 +747,7 @@ crontasks +=
     cron = "30 58 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/FT/REVENUE_SUMMARY/load-spark-kpi-emergency-data.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "40 minutes",
     extraTaskParams : [
@@ -740,6 +771,7 @@ crontasks +=
     cron = "0 0 */3 * * ?",
     configFile = "/DATALAB/CONF/QUICKSEARCH/load-spark-ft-quicksearch-cdr.conf",
     taskType = "BATCH",
+     taskQueue = "collect",
     taskLauncher = ${BATCH_SCRIPT_LAUNCHER},
     timeout = "178 minutes",
     extraTaskParams : [
