Ajout des propriétés de filtrage et d'état dans les fichiers de conf des FT

--- a/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-month.conf
+++ b/PROD/CONF/IN_ZTE/CBM/load-spark-ft-client-site-traffic-month.conf
@@ -23,8 +23,8 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(distinct date_format(datecode,'yyyy-MM')) = 2, 'OK', 'NOK')
 from dim.dt_dates
 where substring(datecode, 1, 7) between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7)
     and substring(datecode, 1, 7) in (select distinct EVENT_MONTH from MON.SPARK_FT_CLIENT_SITE_TRAFFIC_MONTH where EVENT_MONTH between substring(add_months(current_date, -2), 1, 7) and substring(add_months(current_date, -1), 1, 7))
