--- a/PROD/CONF/IN_ZTE/FT/load-spark-ft-msisdn-post-monthly.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-spark-ft-msisdn-post-monthly.conf
@@ -23,8 +23,8 @@ flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-has-state-query=true
 flux.slice-state-query="""
-select  if(count(*)=7,'OK','NOK')
-
+select
+    if(count(distinct date_format(datecode,'yyyy-MM')) = 4, 'OK', 'NOK')
 from dim.dt_dates
 where substring(datecode, 1, 7) between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7)
     and substring(datecode, 1, 7) in (select distinct mois from mon.spark_ft_msisdn_post_monthly where mois between substring(add_months(current_date, -4), 1, 7) and substring(add_months(current_date, -1), 1, 7))
