--- a/PROD/CONF/NOTIFICATION/spark_sms_parc.conf
+++ b/PROD/CONF/NOTIFICATION/spark_sms_parc.conf
@@ -15,11 +15,27 @@ flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
+flux.slice-has-state-query=true
+flux.slice-state-query="""
+select
+    if(count(*)=7,'OK','NOK')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct sdate from mon.SPARK_SMS_PARC where sdate between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
+flux.slice-has-filter-query = true
+flux.slice-filter-query = """
+select
+    date_format(datecode,'yyyy-MM-dd')
+from dim.dt_dates
+where datecode between date_sub(current_date, 7) and date_sub(current_date, 1)
+    and datecode in (select distinct sdate from mon.SPARK_SMS_PARC where sdate between date_sub(current_date, 7) and date_sub(current_date, 1))
+"""
 flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 
 flux.inline.exec-queries += "SET hive.exec.dynamic.partition=true"
