--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -279,7 +279,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_SPARK_FT_MARKETING_DATAMART_MONTH",
-    cron = "0 5 */11-5 * ?",
+    cron = "0 5 */1 1-5 * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-marketing-datamart-month.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
