--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-om-a.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-om-a.conf
@@ -33,7 +33,7 @@ flux.sqoop.jdbc-username = "mon"
 flux.sqoop.jdbc-password = "Mon123ocm#"
 flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 
-flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_RAS_IRSF WHERE EVENT_DATE='###SLICE_VALUE###'"
+flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_RAS_OM_A WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.SQ_FT_A_RAS_OM_A"
 flux.sqoop.export-rdms.dest-table = "MON.FT_A_RAS_OM_A"
