update compute et sqoop crontask et modification du fichier des conf de l'equation et recyclage

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -211,7 +211,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_FT_A_APPELS_CTI_COUNT",
-    cron = "0 */10 * * * ?",
+    cron = "0 20 */1 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti-count.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
@@ -228,7 +228,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "SQ_EXPORT_FT_A_APPELS_CTI",
-    cron = "0 */10 * * * ?",
+    cron = "0 20 */1 * * ?",
     configFile = "/PROD/CONF/SQOOP/sqoop-export-fta-appels-cti.conf",
     taskType = "SQOOP",
      taskQueue = "compute",
