automatisation des sqoop ft-a-revenu-assurance

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -407,3 +407,187 @@ crontasks +=
       , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
     ]
   }
+
+
+  crontasks +=
+    {
+      instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_CONSO_DATA",
+      cron = "0 45 */1 * * ?",
+      configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-conso-data.conf",
+      taskType = "SQOOP",
+       taskQueue = "compute",
+      taskLauncher = ${SQOOP_LAUNCHER}
+      timeout = "240 minutes"
+      extraTaskParams : [
+        {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+        , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+        , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+      ]
+    }
+
+    crontasks +=
+        {
+          instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_CONSO_DATA",
+          cron = "0 45 */1 * * ?",
+          configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-conso-data.conf",
+          taskType = "SQOOP",
+           taskQueue = "compute",
+          taskLauncher = ${SQOOP_LAUNCHER}
+          timeout = "240 minutes"
+          extraTaskParams : [
+            {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+            , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+            , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+          ]
+        }
+
+    crontasks +=
+            {
+              instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_IPP",
+              cron = "0 55 */1 * * ?",
+              configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-ipp.conf",
+              taskType = "SQOOP",
+               taskQueue = "compute",
+              taskLauncher = ${SQOOP_LAUNCHER}
+              timeout = "230 minutes"
+              extraTaskParams : [
+                {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+              ]
+            }
+    crontasks +=
+                {
+                  instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_IRSF",
+                  cron = "0 55 */1 * * ?",
+                  configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-irsf.conf",
+                  taskType = "SQOOP",
+                   taskQueue = "compute",
+                  taskLauncher = ${SQOOP_LAUNCHER}
+                  timeout = "240 minutes"
+                  extraTaskParams : [
+                    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                    , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                    , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                  ]
+                }
+    crontasks +=
+            {
+              instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_OM_A",
+              cron = "0 45 */1 * * ?",
+              configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-om-a.conf",
+              taskType = "SQOOP",
+               taskQueue = "compute",
+              taskLauncher = ${SQOOP_LAUNCHER}
+              timeout = "240 minutes"
+              extraTaskParams : [
+                {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+              ]
+            }
+     crontasks +=
+                {
+                  instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_OM_SMS_BYPASS",
+                  cron = "0 45 */1 * * ?",
+                  configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-om-sms-bypass.conf",
+                  taskType = "SQOOP",
+                   taskQueue = "compute",
+                  taskLauncher = ${SQOOP_LAUNCHER}
+                  timeout = "240 minutes"
+                  extraTaskParams : [
+                    {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                    , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                    , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                  ]
+                }
+     crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_RECHARGE_1",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-recharge-1.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
+     crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_RECHARGE_2",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-recharge-2.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
+    crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_RECHARGE_3",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-recharge-3.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
+    crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_SF_E",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-sf-e.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
+    crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_SF_S",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-sf-s.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
+    crontasks +=
+                 {
+                   instanceId = "SQ_EXPORT_SPARK_FT_A_RAS_TRAFIC_D",
+                   cron = "0 45 */1 * * ?",
+                   configFile = "/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-trafic-d.conf",
+                   taskType = "SQOOP",
+                    taskQueue = "compute",
+                   taskLauncher = ${SQOOP_LAUNCHER}
+                   timeout = "240 minutes"
+                   extraTaskParams : [
+                     {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+                     , {"param" : "-main cm.orange.processor.SqoopLauncher"}
+                     , {"param" : "-Dmapreduce.map.java.opts='-Duser.timezone=UTC'"}
+                   ]
+                 }
