automatisation des sqoop ft-a-revenu-assurance

--- a/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
+++ b/PROD/CONF/FT_GROSS_ADD_COMPETITIORS/load-spark-ft-operator-acct-activity.conf
@@ -18,7 +18,7 @@ flux.name = "LOAD_SPARK_FT_OPERATOR_ACCT_ACTIVITY"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -
+flux.slice-begin-value = -7
 flux.slice-end-value = 0
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
