--- a/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-ipp.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-spark-ft-a-ras-ipp.conf
@@ -21,7 +21,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM RAF_DWH.FT_A_RAS_IPP WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
+(SELECT COUNT(*) NBR FROM MON.FT_A_RAF_IPP WHERE event_date BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
@@ -36,7 +36,7 @@ flux.sqoop.jdbc-driver = "oracle.jdbc.driver.OracleDriver"
 flux.sqoop.query = "SELECT * FROM AGG.SPARK_FT_A_RAS_IPP WHERE EVENT_DATE='###SLICE_VALUE###'"
 
 flux.sqoop.export-rdms.staging-table = "MON.FT_A_RAS_IPP_TMP"
-flux.sqoop.export-rdms.dest-table = "RAF_DWH.FT_A_RAS_IPP"
+flux.sqoop.export-rdms.dest-table = "MON.FT_A_RAF_IPP"
 flux.sqoop.export-hive.staging-table = "TMP_FT_A_RAS_IPP"
 flux.sqoop.export-hive.staging-table-database = "TMP"
 
